--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -7,6 +7,9 @@
 		<link rel="icon" type="image/svg+xml" href="/logo.webp" />
 		<meta name="generator" content={Astro.generator} />
 		<title>Jail Constructora</title>
+		<meta name="description" content="Jail Constructora S.A.C" />
+		<meta name="keywords" content="Jail, Constructora S.A.C, Construcción, Edificación, Obras, Proyectos" />
+		<meta name="author" content="Jail Constructora S.A.C" />
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 		<link
